--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -1,24 +1,85 @@
+/* Original color palette */
+
+/*.root {*/
+/*    -fx-font: 16px "Helvetica";*/
+/*    -fx-background-color: #F6F3E7;*/
+/*}*/
+/*.vbox {*/
+/*    -fx-background-color: #D9D9D9;*/
+/*}*/
+/*.button {*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-background-color: #3E3E3E ;*/
+/*    -fx-min-height: 30;*/
+/*    -fx-text-fill: white;*/
+/*    -fx-border-radius: 10;*/
+/*    -fx-font: 12px;*/
+
+/*}*/
+/*.text-field {*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-padding: 5 10;*/
+/*    -fx-font-size: 12px;*/
+/*    -fx-border-color: #D9D9D9;*/
+/*}*/
+/*.text-field2 {*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-padding: 5 10;*/
+/*    -fx-font-size: 12px;*/
+/*    -fx-border-color: red;*/
+/*    -fx-prompt-text-fill: red;*/
+/*}*/
+/*.hbox {*/
+/*    -fx-background-color: #3E3E3E;*/
+/*}*/
+/*.button:hover {*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-min-height: 30;*/
+/*    -fx-text-fill: #D9D9D9 ;*/
+/*    -fx-font: 12px;*/
+/*}*/
+/*.combo-box {*/
+/*    -fx-fill: white;*/
+/*    -fx-border-radius: 5;*/
+/*    -fx-background-color: white;*/
+/*    -fx-font-size: 14px;*/
+/*}*/
+/*.text {*/
+/*    -fx-font: 14px "Helvetica";*/
+/*    !*-fx-font-weight: bold;*!*/
+/*}*/
+/*.heading {*/
+/*    -fx-font: 16px "Helvetica";*/
+/*    -fx-font-weight: bold;*/
+/*}*/
+/*.rectangle {*/
+/*    -fx-fill: #D9D9D9;*/
+/*    -fx-border-width: 20;*/
+/*    -fx-border-radius: 20;*/
+/*}*/
+
+/* Beige color palette */
+
 .root {
-    -fx-font: 16px "Helvetica";
-    -fx-background-color: green;
+    -fx-font: 16px "SansSerif";
+    -fx-background-color: #F1EDE6;
 }
 .vbox {
-    -fx-background-color: #D9D9D9;
+    -fx-background-color: #D1C7BD;
 }
 .button {
     -fx-background-radius: 10;
-    -fx-background-color: #3E3E3E ;
+    -fx-background-color: #A48374 ;
     -fx-min-height: 30;
     -fx-text-fill: white;
     -fx-border-radius: 10;
-    -fx-font: 12px;
+    -fx-font: 12px "SansSerif";
 
 }
 .text-field {
     -fx-background-radius: 10;
     -fx-padding: 5 10;
     -fx-font-size: 12px;
-    -fx-border-color: #D9D9D9;
 }
 .text-field2 {
     -fx-background-radius: 10;
@@ -28,13 +89,15 @@
     -fx-prompt-text-fill: red;
 }
 .hbox {
-    -fx-background-color: #3E3E3E;
+    -fx-background-color: #A48374;
 }
 .button:hover {
     -fx-background-radius: 10;
     -fx-min-height: 30;
     -fx-text-fill: #D9D9D9 ;
-    -fx-font: 12px;
+    -fx-font: 12px "SansSerif";
+    -fx-background-color: #A48374 ;
+
 }
 .combo-box {
     -fx-fill: white;
@@ -43,15 +106,136 @@
     -fx-font-size: 14px;
 }
 .text {
-    -fx-font: 14px "Helvetica";
+    -fx-font: 14px "SansSerif";
     /*-fx-font-weight: bold;*/
 }
 .heading {
-    -fx-font: 16px "Helvetica";
+    -fx-font: 16px "SansSerif";
     -fx-font-weight: bold;
 }
 .rectangle {
-    -fx-fill: #D9D9D9;
+    -fx-fill: #D1C7BD;
     -fx-border-width: 20;
     -fx-border-radius: 20;
 }
+
+/* Pink color palette */
+/*.root {*/
+/*    -fx-font: 16px "SansSerif";*/
+/*    -fx-background-color: #F2EBDF;*/
+/*}*/
+/*.vbox {*/
+/*    -fx-background-color: #F2A29B;*/
+/*}*/
+/*.button {*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-background-color: #D95964 ;*/
+/*    -fx-min-height: 30;*/
+/*    -fx-text-fill: white;*/
+/*    -fx-border-radius: 10;*/
+/*    -fx-font: 12px "SansSerif";*/
+
+/*}*/
+/*.text-field {*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-padding: 5 10;*/
+/*    -fx-font-size: 12px;*/
+/*}*/
+/*.text-field2 {*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-padding: 5 10;*/
+/*    -fx-font-size: 12px;*/
+/*    -fx-border-color: red;*/
+/*    -fx-prompt-text-fill: red;*/
+/*}*/
+/*.hbox {*/
+/*    -fx-background-color: #D95964;*/
+/*}*/
+/*.button:hover {*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-min-height: 30;*/
+/*    -fx-text-fill: #D9D9D9 ;*/
+/*    -fx-font: 12px "SansSerif";*/
+/*    -fx-background-color: #D95964 ;*/
+
+/*}*/
+/*.combo-box {*/
+/*    -fx-fill: white;*/
+/*    -fx-border-radius: 5;*/
+/*    -fx-background-color: white;*/
+/*    -fx-font-size: 14px;*/
+/*}*/
+/*.text {*/
+/*    -fx-font: 14px "SansSerif";*/
+/*    !*-fx-font-weight: bold;*!*/
+/*}*/
+/*.heading {*/
+/*    -fx-font: 16px "SansSerif";*/
+/*    -fx-font-weight: bold;*/
+/*}*/
+/*.rectangle {*/
+/*    -fx-fill: #F2A29B;*/
+/*    -fx-border-width: 20;*/
+/*    -fx-border-radius: 20;*/
+/*}*/
+
+/* Blue color palette */
+
+/*.root {*/
+/*    -fx-font: 16px "SansSerif";*/
+/*    -fx-background-color: #f0fcfe;*/
+/*}*/
+/*.vbox {*/
+/*    -fx-background-color: #86b6c6;*/
+/*}*/
+/*.button {*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-background-color: #1f5372 ;*/
+/*    -fx-min-height: 30;*/
+/*    -fx-text-fill: white;*/
+/*    -fx-border-radius: 10;*/
+/*    -fx-font: 12px "SansSerif";*/
+
+/*}*/
+/*.text-field {*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-padding: 5 10;*/
+/*    -fx-font-size: 12px;*/
+/*}*/
+/*.text-field2 {*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-padding: 5 10;*/
+/*    -fx-font-size: 12px;*/
+/*    -fx-border-color: red;*/
+/*    -fx-prompt-text-fill: red;*/
+/*}*/
+/*.hbox {*/
+/*    -fx-background-color: #1f5372;*/
+/*}*/
+/*.button:hover {*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-min-height: 30;*/
+/*    -fx-text-fill: #f0fcfe ;*/
+/*    -fx-font: 12px "SansSerif";*/
+/*    -fx-background-color: #1f5372 ;*/
+
+/*}*/
+/*.combo-box {*/
+/*    -fx-fill: white;*/
+/*    -fx-border-radius: 5;*/
+/*    -fx-background-color: white;*/
+/*    -fx-font-size: 14px;*/
+/*}*/
+/*.text {*/
+/*    -fx-font: 14px "SansSerif";*/
+/*    !*-fx-font-weight: bold;*!*/
+/*}*/
+/*.heading {*/
+/*    -fx-font: 16px "SansSerif";*/
+/*    -fx-font-weight: bold;*/
+/*}*/
+/*.rectangle {*/
+/*    -fx-fill: #86b6c6;*/
+/*    -fx-border-width: 20;*/
+/*    -fx-border-radius: 20;*/
+/*}*/
